--- a/components/CoursePreview.module.css
+++ b/components/CoursePreview.module.css
@@ -99,10 +99,11 @@
     padding: 40px 0px;
   }
 
-  .highlighted {
-  padding: 60px 40px;
-  width: fit-content;
-  max-width: 100%;
+.highlighted {
+  padding: 60px 80px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
   border-radius: 12px;
 }
 
