--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -66,10 +66,11 @@
   }
   
   .subtitle {
-    font-size: 70px;
+    font-size: 60px;
     font-weight: 600;
+    width: 70%;
     margin-top: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 
   .socialIcons {
@@ -77,8 +78,8 @@
   }
 
   .icon {
-  width: 38px;
-  height: 38px;
+  width: 28px;
+  height: 28px;
   }
 
   .content {
