--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -23,11 +23,11 @@
 /* DESKTOP */
 @media (min-width: 768px) {
   .header {
-    padding: 16px 60px 16px 120px;
+    padding: 16px 100px;
   }
 
   .logo {
-    font-size: 40px;
+    font-size: 32px;
     
   }
 }
