--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -61,14 +61,14 @@
 @media (min-width: 768px) {
   .hero {
     min-height: 80vh;
-    padding: 20px 40px 0 120px;
+    padding: 20px 60px 0 100px;
     background: linear-gradient(to bottom, #000000, #3f3f3f);
   }
   
   .subtitle {
-    font-size: 60px;
+    font-size: 52px;
     font-weight: 600;
-    width: 70%;
+    max-width: 800px;
     margin-top: 20px;
     margin-bottom: 20px;
   }
