--- a/app/articles/[slug]/article.module.css
+++ b/app/articles/[slug]/article.module.css
@@ -17,7 +17,7 @@
 .breadcrumbText {
   font-size: 14px;
   color: #4b5563;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .breadcrumbText a {
@@ -39,15 +39,15 @@
 }
 
 .title {
-  font-size: 42px;
+  font-size: 33px;
   font-weight: 700;
   margin-bottom: 16px;
   color: #000000;
-  line-height: 1.1;
+  line-height: 1.12;
 }
 
 .subtitle {
-  font-size: 20px;
+  font-size: 19px;
   color: #1f2937;
   line-height: 1.6;
 }
@@ -109,7 +109,7 @@
 /* Portable Text Styles - These apply globally within bodyContent */
 .bodyContent p {
   margin-bottom: 24px;
-  font-size: 16px;
+  font-size: 17px;
   line-height: 1.6;
   color: #000000;
 }
@@ -150,9 +150,8 @@
 }
 
 .imageCaption {
-  font-size: 12px !important;
+  font-size: 13px !important;
   color: #777777 !important;
-  text-transform: uppercase;
   margin-top: 2px;
   font-family: 'Montserrat', sans-serif;
 }
@@ -266,7 +265,7 @@
 /* DESKTOP */
 @media (min-width: 768px) {
   .title {
-    font-size: 48px;  /* Back to 48px on desktop */
+    font-size: 44px;
   }
   
   .relatedGrid {
