verbiage edit. color accent edit

--- a/app/articles/[slug]/article.module.css
+++ b/app/articles/[slug]/article.module.css
@@ -131,7 +131,7 @@
 }
 
 .bodyContent blockquote {
-  border-left: 4px solid #9ca3af;
+  border-left: 4px solid #ffde59;
   padding-left: 24px;
   margin: 32px 0;
   font-style: italic;
